trybuild-qcell/src/compiletest/lcell_generativity-07.stderr
error[E0505]: cannot move out of `c1` because it is borrowed
  --> src/compiletest/lcell_generativity-07.rs:11:10
   |
9  |     let c1 = Rc::new(LCell::new(100u32));
   |         -- binding `c1` declared here
10 |     let c1ref = owner.ro(&c1);
   |                          --- borrow of `c1` occurs here
11 |     drop(c1);    // Compile error
   |          ^^ move out of `c1` occurs here
12 |     println!("{}", *c1ref);
   |                    ------ borrow later used here
